Adjusted package.json to build sucessfully on Ubuntu 17. However, some bugs still need to be fixed to the app fully works on Linux.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "homepage": "./",
   "name": "hokus-cms",
-  "author": "Juliano Appel Klein",
+  "author": {
+    "name":"Juliano Appel Klein",
+    "email": "julianoaklein@gmail.com"
+  },
   "description": "A simple UI for Hugo.",
   "version": "0.1.0",
   "private": true,
@@ -27,7 +30,7 @@
     "cross-env": "5.1.3",
     "concurrently": "3.5.1",
     "electron": "2.0.3",
-    "electron-builder": "20.15.1",
+    "electron-builder": "20.28.4",
     "electron-devtools-installer": "2.2.4",
     "material-ui": "0.20.0",
     "markdown-it": "8.4.1",
@@ -35,7 +38,7 @@
     "react-dom": "16.4.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "copyfiles": "1.2.0",
+    "copyfiles": "2.1.0",
     "mocha": "5.0.2",
     "chai": "4.1.2",
     "flow-bin": "0.75.0",
@@ -43,16 +46,18 @@
   },
   "main": "src-main/electron.js",
   "scripts": {
-    "_copy-electron-code": "copyfiles -u 1 ./src-main/**/*.* ./build/electron/",
-    "_copy-ace": "copyfiles -u 3 ./node_modules/ace-editor-builds/src-min-noconflict/**/*.* ./public/ace-editor-min-noconflict/",
-    "_copy_ace_extras": "copyfiles -u 2 ./extras/ace-editor/**/*.* ./public/ace-editor-min-noconflict/",
+    "_copy-electron-code": "copyfiles -u 1 -V \"./src-main/**/*\" \"./build/electron/\"",
+    "_copy-ace": "copyfiles -u 3 -V \"./node_modules/ace-editor-builds/src-min-noconflict/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
+    "_copy_ace_extras": "copyfiles -u 2 -V \"./extras/ace-editor/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_react-build": "react-scripts build",
     "_react-dev": "cross-env APP_ENV=development cross-env BROWSER=none cross-env PORT=4000 cross-env react-scripts start",
     "_electron-dev": "cross-env APP_ENV=development cross-env REACT_DEV_URL=http://localhost:4000 cross-env  electron .",
-    "_electron-dist": "npm run _copy-electron-code && electron-builder",
+    "_electron-dist-win": "npm run _copy-electron-code && electron-builder",
+    "_electron-dist-linux": "npm run _copy-electron-code && electron-builder --linux deb",
     "_flow-kill": "taskkill /F /IM flow.exe",
     "dev": "npm run _copy-ace && concurrently --kill-others \"npm run _react-dev\" \"npm run _electron-dev\"",
-    "dist": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist",
+    "dist-win": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-win",
+    "dist-linux": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-linux",
     "test": "./node_modules/.bin/mocha",
     "flow-restart": "concurrently \"taskkill /F /IM flow.exe\" \"flow\""
   },
