--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "js-yaml":"3.12.0",
     "mkdirp":"0.5.1",
     "opn":"5.2.0",
-    "osenv":"0.1.4",
+    "user-home":"2.0.0",
     "request": "2.87.0",
     "s3":"4.4.0",
     "toml":"2.3.3",
