--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "./",
   "name": "hokus-cms",
   "author": {
-    "name":"Juliano Appel Klein",
+    "name": "Juliano Appel Klein",
     "email": "julianoaklein@gmail.com"
   },
   "description": "A simple UI for Hugo.",
@@ -12,38 +12,44 @@
     "7zip-bin": "3.1.0",
     "electron-is-dev": "0.3.0",
     "electron-unhandled": "1.1.0",
-    "fs-extra":"5.0.0",
-    "glob":"7.1.2",
-    "jimp":"0.2.28",
+    "fs-extra": "5.0.0",
+    "glob": "7.1.2",
+    "jimp": "0.2.28",
     "joi": "13.4.0",
-    "js-yaml":"3.12.0",
-    "mkdirp":"0.5.1",
-    "opn":"5.2.0",
-    "user-home":"2.0.0",
+    "js-yaml": "3.12.0",
+    "mkdirp": "0.5.1",
+    "nodegit": "0.22.2",
+    "opn": "5.2.0",
+    "user-home": "2.0.0",
     "request": "2.87.0",
-    "s3":"4.4.0",
-    "toml":"2.3.3",
-    "tomlify-j0.4":"3.0.0"
+    "s3": "4.4.0",
+    "toml": "2.3.3",
+    "tomlify-j0.4": "3.0.0",
+    "xml-js": "1.6.8"
   },
   "devDependencies": {
-	"ace-editor-builds": "1.2.4",
-    "cross-env": "5.1.3",
+    "ace-editor-builds": "1.2.4",
+    "ajv": "6.5.3",
+    "chai": "4.1.2",
     "concurrently": "3.5.1",
-    "electron": "2.0.3",
+    "copyfiles": "2.1.0",
+    "cross-env": "5.1.3",
+    "electron": "^2.0.3",
     "electron-builder": "20.28.4",
     "electron-devtools-installer": "2.2.4",
-    "material-ui": "0.20.0",
+    "flow-bin": "0.75.0",
+    "flow-typed": "2.4.0",
     "markdown-it": "8.4.1",
-    "react": "16.4.1",    
+    "material-ui": "0.20.0",
+    "mocha": "5.0.2",
+    "node-abi": "2.4.4",
+    "node-pre-gyp": "0.11.0",
+    "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.4",
-    "copyfiles": "2.1.0",
-    "mocha": "5.0.2",
-    "chai": "4.1.2",
-    "flow-bin": "0.75.0",
-    "flow-typed": "2.4.0"
+    "react-scripts": "1.1.4"
   },
+  "peerDependencies": {},
   "main": "src-main/electron.js",
   "scripts": {
     "_copy-electron-code": "copyfiles -u 1 -V \"./src-main/**/*\" \"./build/electron/\"",
@@ -52,6 +58,7 @@
     "_react-build": "react-scripts build",
     "_react-dev": "cross-env APP_ENV=development cross-env BROWSER=none cross-env PORT=4000 cross-env react-scripts start",
     "_electron-dev": "cross-env APP_ENV=development cross-env REACT_DEV_URL=http://localhost:4000 cross-env  electron .",
+    "_rebuild-native": "cross-env VisualStudioVersion=15.0 npm install --build-from-source",
     "_electron-dist-win": "npm run _copy-electron-code && electron-builder",
     "_electron-dist-linux": "npm run _copy-electron-code && electron-builder --linux deb",
     "_flow-kill": "taskkill /F /IM flow.exe",
@@ -66,8 +73,8 @@
     "directories": {
       "buildResources": "public"
     },
-    "win":{
-      "icon":"public/icon"
+    "win": {
+      "icon": "public/icon"
     }
   }
 }
