--- a/package.json
+++ b/package.json
@@ -6,47 +6,46 @@
     "email": "julianoaklein@gmail.com"
   },
   "description": "A CMS for Hugo.",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": true,
   "dependencies": {
     "7zip-bin": "3.1.0",
-    "electron-is-dev": "0.3.0",
-    "electron-unhandled": "1.1.0",
+    "electron-context-menu": "^0.10.1",
+    "electron-is-dev": "^1.0.1",
+    "electron-unhandled": "^1.1.0",
     "fs-extra": "5.0.0",
     "glob": "7.1.2",
     "jimp": "0.2.28",
     "joi": "13.4.0",
     "js-yaml": "3.12.0",
     "mkdirp": "0.5.1",
-    "nodegit": "0.22.2",
+    "nodegit": "0.23.0",
     "user-home": "2.0.0",
     "request": "2.87.0",
     "s3": "4.4.0",
     "toml": "2.3.3",
-    "tomlify-j0.4": "3.0.0",
-    "xml-js": "1.6.8"
+    "tomlify-j0.4": "3.0.0"
   },
   "devDependencies": {
     "ace-editor-builds": "1.2.4",
-    "ajv": "6.5.3",
+    "ajv": "6.5.4",
     "chai": "4.1.2",
     "concurrently": "3.5.1",
     "copyfiles": "2.1.0",
     "cross-env": "5.1.3",
-    "electron": "^2.0.3",
-    "electron-builder": "20.28.4",
-    "electron-devtools-installer": "2.2.4",
+    "electron": "3.0.5",
+    "electron-builder": "^20.31.2",
     "flow-bin": "0.75.0",
     "flow-typed": "2.4.0",
     "markdown-it": "8.4.1",
     "material-ui": "0.20.0",
     "mocha": "5.0.2",
-    "node-abi": "2.4.4",
+    "node-abi": "2.5.0",
     "node-pre-gyp": "0.11.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.4"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1"
   },
   "peerDependencies": {},
   "main": "src-main/electron.js",
@@ -59,7 +58,8 @@
     "_electron-dev": "cross-env APP_ENV=development cross-env REACT_DEV_URL=http://localhost:4000 cross-env  electron .",
     "_rebuild-native": "cross-env VisualStudioVersion=15.0 npm install --build-from-source",
     "_electron-dist-win": "npm run _copy-electron-code && electron-builder",
-    "_electron-dist-linux": "npm run _copy-electron-code && electron-builder --linux deb",
+    "_electron-dist-linux-deb": "npm run _copy-electron-code && electron-builder --linux deb",
+    "_electron-dist-linux": "npm run _copy-electron-code && electron-builder",
     "_flow-kill": "taskkill /F /IM flow.exe",
     "dev": "npm run _copy-ace && concurrently --kill-others \"npm run _react-dev\" \"npm run _electron-dev\"",
     "dist-win": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-win",
@@ -69,12 +69,18 @@
   },
   "build": {
     "appId": "julianoaklein.hokus",
-    "productName":"Hokus CMS",
+    "productName": "Hokus CMS",
     "directories": {
       "buildResources": "public"
     },
     "win": {
       "icon": "public/icon"
     }
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
