Small adjustment to fix last PR.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.hokus.io/",
+  "homepage": "./",
   "name": "hokus-cms",
   "author": {
     "name": "Juliano Appel Klein",
