--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
 cache: npm
 
 install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then apt-get install git-core; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then apt-get install libssl-dev; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install git-core; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libssl-dev; fi
   - npm install
 
 script:
