--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
   - os: linux
     dist: xenial
     sudo: required
+  - os: osx
 
 cache: npm
 
@@ -18,3 +19,4 @@ install:
 
 script:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then npm run dist-linux; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then npm run dist-mac; fi
