Renaming product name to get a more friendly package name

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   },
   "build": {
     "appId": "julianoaklein.hokus",
-    "productName": "Hokus CMS",
+    "productName": "hokus-cms",
     "directories": {
       "buildResources": "public"
     },
