--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,26 @@ install:
 script:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then npm run dist-linux; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then npm run dist-mac; fi
+
+deploy:
+  skip_cleanup: true
+  - provider: releases
+    api_key: $GITHUB_OAUTH_TOKEN
+    file:
+      - "dist/hokus-cms_linux_amd64.snap"
+      - "dist/hokus-cms_linux_x86_64.AppImage"
+      - "hokus-cms_linux_amd64.deb"
+    draft: true
+    on:
+      # tags: true
+      condition: "$TRAVIS_OS_NAME" == "linux"
+  
+  # - provider: releases
+  #   api_key: $GITHUB_OAUTH_TOKEN
+  #   file:
+  #     - "FILE TO UPLOAD"
+  #     - "FILE TO UPLOAD"
+  #   draft: true
+  #   on:
+  #     tags: true
+  #     condition: "$TRAVIS_OS_NAME" == "osx"
