--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ deploy:
     - "hokus-cms_linux_amd64.deb"
   draft: true
   on:
+    branch: travis-ci
     condition: $TRAVIS_OS_NAME = linux
       # tags: true 
   # - provider: releases
