--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ deploy:
       - "dist/hokus-cms_linux_amd64.snap"
       - "dist/hokus-cms_linux_x86_64.AppImage"
       - "dist/hokus-cms_linux_amd64.deb"
-    draft: true
     on:
-      branch: travis-ci
+      tag: true
+      branch: master
       condition: $TRAVIS_OS_NAME = linux 
   - provider: releases
     skip_cleanup: true
@@ -39,7 +39,7 @@ deploy:
     file:
       - "dist/hokus-cms_mac.dmg"
       - "dist/hokus-cms_mac.zip"
-    draft: true
     on:
-      branch: travis-ci
+      tag: true
+      branch: master
       condition: $TRAVIS_OS_NAME = osx
