--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ deploy:
       - "dist/hokus-cms_linux_x86_64.AppImage"
       - "dist/hokus-cms_linux_amd64.deb"
     on:
+      all_branches: true
       condition: $TRAVIS_OS_NAME = linux AND $TRAVIS_COMMIT_MESSAGE =~ BUILD\sDRAFT 
   - provider: releases
     skip_cleanup: true
@@ -40,4 +41,5 @@ deploy:
       - "dist/hokus-cms_mac.dmg"
       - "dist/hokus-cms_mac.zip"
     on:
+      all_branches: true
       condition: $TRAVIS_OS_NAME = osx AND $TRAVIS_COMMIT_MESSAGE =~ BUILD\sDRAFT
