--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "user-home": "2.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "ace-editor-builds": "1.2.4",
     "ajv": "6.5.4",
     "chai": "4.1.2",
@@ -42,6 +44,9 @@
     "cross-env": "5.1.3",
     "electron": "3.0.5",
     "electron-builder": "^20.31.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "flow-bin": "0.75.0",
     "flow-typed": "2.4.0",
     "markdown-it": "8.4.1",
@@ -49,6 +54,7 @@
     "mocha": "5.0.2",
     "node-abi": "2.5.0",
     "node-pre-gyp": "0.11.0",
+    "prettier": "^1.19.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
