Converted almost all JS files from src-main code to TS. Only the jobs folder were not converted.
Adjusted the project  to transpile the TS before debugging or building.
Files changed:
- package.json
- tasks.json
- launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
         },
         {
             //from: https://electronjs.org/docs/tutorial/debugging-main-process-vscode
-
+            "preLaunchTask": "Main Transpile",
             "name": "Debug Main Process",
             "type": "node",
             "request": "launch",
