--- a/package.json
+++ b/package.json
@@ -10,24 +10,27 @@
   "private": true,
   "dependencies": {
     "7zip-bin": "3.1.0",
+    "@types/fs-extra": "^8.1.0",
     "@types/jest": "^25.1.4",
+    "@types/joi": "^14.3.4",
     "@types/markdown-it": "^0.0.9",
     "@types/material-ui": "^0.21.7",
     "@types/node": "^13.9.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/request": "2.48.4",
     "electron-context-menu": "^0.10.1",
     "electron-is-dev": "^1.0.1",
     "electron-unhandled": "^1.1.0",
-    "fs-extra": "5.0.0",
+    "fs-extra": "^8.1.0",
     "glob": "7.1.2",
     "jimp": "0.2.28",
-    "joi": "13.4.0",
+    "joi": "^14.3.1",
     "js-yaml": "3.13.1",
     "mkdirp": "0.5.1",
     "nodegit": "0.23.0",
-    "request": "2.87.0",
+    "request": "2.88.2",
     "s3": "4.4.0",
     "toml": "2.3.3",
     "tomlify-j0.4": "3.0.0",
@@ -59,23 +62,26 @@
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
+    "rimraf": "^3.0.2",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {},
-  "main": "src-main/electron.js",
+  "main": "build/src-main/electron.js",
   "scripts": {
     "start": "npm run _copy-ace && concurrently --kill-others \"npm run _react-dev\" \"npm run _electron-dev\"",
-    "_copy-electron-code": "copyfiles -u 1 -V \"./src-main/**/*\" \"./build/electron/\"",
+    "_copy-electron-code": "npm run _main-transpile && copyfiles -u 2 -V \"./build/src-main/**/*\" \"./build/electron/\" && rimraf ./build/src-main/",
+    "_copy-electron-code-old": "copyfiles -u 1 -V \"./src-main/**/*\" \"./build/electron/\"",
     "_copy-ace": "copyfiles -u 3 -V \"./node_modules/ace-editor-builds/src-min-noconflict/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_copy_ace_extras": "copyfiles -u 2 -V \"./extras/ace-editor/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_react-build": "cross-env CI=false react-scripts build",
     "_react-dev": "cross-env APP_ENV=development cross-env BROWSER=none cross-env PORT=4000 cross-env react-scripts start",
+    "_main-transpile": "cd ./src-main && tsc",
     "_electron-dev": "cross-env APP_ENV=development cross-env REACT_DEV_URL=http://localhost:4000 cross-env  electron .",
     "_rebuild-native": "cross-env VisualStudioVersion=15.0 npm install --build-from-source",
     "_electron-dist-win": "npm run _copy-electron-code && electron-builder",
     "_electron-dist-linux-deb": "npm run _copy-electron-code && electron-builder --linux deb",
     "_electron-dist-linux": "npm run _copy-electron-code && electron-builder",
-    "_electron-dist-linux-all": "npm run _electron-dist-linux && electron-builder --linux deb",
+    "_electron-dist-linux-all": "npm run _electron-dist-linux && npm run _electron-dist-linux-deb",
     "_electron-dist-mac": "npm run _copy-electron-code && electron-builder",
     "_flow-kill": "taskkill /F /IM flow.exe",
     "_flow": "flow",
