--- a/package.json
+++ b/package.json
@@ -68,9 +68,8 @@
   "peerDependencies": {},
   "main": "build/src-main/electron.js",
   "scripts": {
-    "start": "npm run _copy-ace && concurrently --kill-others \"npm run _react-dev\" \"npm run _electron-dev\"",
+    "start": "npm run _copy-ace && npm run _main-transpile && concurrently --kill-others \"npm run _react-dev\" \"npm run _electron-dev\"",
     "_copy-electron-code": "npm run _main-transpile && copyfiles -u 2 -V \"./build/src-main/**/*\" \"./build/electron/\" && rimraf ./build/src-main/",
-    "_copy-electron-code-old": "copyfiles -u 1 -V \"./src-main/**/*\" \"./build/electron/\"",
     "_copy-ace": "copyfiles -u 3 -V \"./node_modules/ace-editor-builds/src-min-noconflict/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_copy_ace_extras": "copyfiles -u 2 -V \"./extras/ace-editor/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_react-build": "cross-env CI=false react-scripts build",
