--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@typescript-eslint/parser": "^2.23.0",
     "ace-editor-builds": "1.2.4",
     "ajv": "6.5.4",
+    "ansi-styles": "^3.2.1",
     "chai": "4.1.2",
+    "chalk": "^2.4.2",
     "concurrently": "3.5.1",
     "copyfiles": "2.1.0",
     "cross-env": "5.1.3",
