--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "electron-unhandled": "^1.1.0",
     "fs-extra": "^8.1.0",
     "glob": "7.1.2",
+    "isomorphic-git": "^1.3.0",
     "jimp": "0.2.28",
     "joi": "^14.3.1",
     "js-yaml": "3.13.1",
     "mkdirp": "0.5.1",
-    "nodegit": "0.23.0",
     "request": "2.88.2",
     "s3": "4.4.0",
     "toml": "2.3.3",
@@ -56,8 +56,6 @@
     "markdown-it": "8.4.1",
     "material-ui": "0.20.0",
     "mocha": "5.0.2",
-    "node-abi": "2.5.0",
-    "node-pre-gyp": "0.11.0",
     "prettier": "^1.19.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
