--- a/package.json
+++ b/package.json
@@ -82,14 +82,9 @@
     "_electron-dist-linux": "npm run _copy-electron-code && electron-builder",
     "_electron-dist-linux-all": "npm run _electron-dist-linux && npm run _electron-dist-linux-deb",
     "_electron-dist-mac": "npm run _copy-electron-code && electron-builder",
-    "_flow-kill": "taskkill /F /IM flow.exe",
-    "_flow": "flow",
-    "_prettify": "prettier --write \"**/*.ts\"",
     "dist-win": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-win",
     "dist-linux": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-linux-all",
-    "dist-mac": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-mac",
-    "test": "./node_modules/.bin/mocha",
-    "flow-restart": "concurrently \"taskkill /F /IM flow.exe\" \"flow\""
+    "dist-mac": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-mac"
   },
   "build": {
     "appId": "julianoaklein.hokus",
