--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "markdown-it": "8.4.1",
-    "material-ui": "0.20.0",
+    "material-ui": "^0.20.2",
     "mocha": "5.0.2",
     "prettier": "^1.19.1",
     "react": "^16.8.3",
