--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-context-menu": "^0.10.1",
     "electron-is-dev": "^1.0.1",
     "electron-unhandled": "^1.1.0",
+    "eventemitter2": "^6.3.1",
     "fs-extra": "^8.1.0",
     "glob": "7.1.2",
     "isomorphic-git": "^1.3.0",
