--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/request": "2.48.4",
     "electron-context-menu": "^0.10.1",
     "electron-is-dev": "^1.0.1",
-    "electron-unhandled": "^1.1.0",
+    "electron-unhandled": "^3.0.2",
     "fs-extra": "^8.1.0",
     "glob": "7.1.2",
     "isomorphic-git": "^1.3.0",
@@ -33,7 +33,6 @@
     "js-yaml": "3.13.1",
     "mkdirp": "0.5.1",
     "request": "2.88.2",
-    "s3": "4.4.0",
     "toml": "2.3.3",
     "tomlify-j0.4": "3.0.0",
     "user-home": "2.0.0"
@@ -50,7 +49,7 @@
     "concurrently": "3.5.1",
     "copyfiles": "2.1.0",
     "cross-env": "5.1.3",
-    "electron": "3.0.5",
+    "electron": "^8.2.1",
     "electron-builder": "^20.31.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
