--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "eventemitter2": "^6.3.1",
     "fs-extra": "^8.1.0",
     "glob": "7.1.2",
-    "isomorphic-git": "^1.3.0",
     "jimp": "0.2.28",
     "joi": "^14.3.1",
     "js-yaml": "3.13.1",
     "mkdirp": "0.5.1",
     "request": "2.88.2",
     "s3": "4.4.0",
+    "simple-git": "^1.132.0",
     "toml": "2.3.3",
     "tomlify-j0.4": "3.0.0",
     "user-home": "2.0.0"
