--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "user-home": "2.0.0"
   },
   "devDependencies": {
+    "@date-io/date-fns": "^1.x",
+    "@material-ui/pickers": "^3.2.10",
     "@types/ace": "^0.0.43",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -49,6 +51,7 @@
     "concurrently": "3.5.1",
     "copyfiles": "2.1.0",
     "cross-env": "5.1.3",
+    "date-fns": "^2.12.0",
     "electron": "^8.2.1",
     "electron-builder": "^20.31.2",
     "eslint": "^6.8.0",
