--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "email": "julianoaklein@gmail.com"
   },
   "description": "A CMS for Hugo.",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "dependencies": {
     "7zip-bin": "3.1.0",
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/request": "2.48.4",
+    "command-exists": "^1.2.8",
     "electron-context-menu": "^0.10.1",
     "electron-is-dev": "^1.0.1",
     "electron-unhandled": "^3.0.2",
@@ -51,7 +52,7 @@
     "copyfiles": "2.1.0",
     "cross-env": "5.1.3",
     "electron": "^8.2.1",
-    "electron-builder": "^20.31.2",
+    "electron-builder": "^22.4.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
@@ -61,6 +62,7 @@
     "prettier": "^1.19.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-promise": "^3.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
     "rimraf": "^3.0.2",
@@ -101,6 +103,10 @@
     },
     "mac": {
       "icon": "public/icon"
+    },
+    "linux": {
+      "icon": "./build/icon.icns",
+      "maintainer": "Juliano Appel Klein"
     }
   },
   "browserslist": [
