Keeping ESLint happier.

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "_copy-ace": "copyfiles -u 3 -V \"./node_modules/ace-editor-builds/src-min-noconflict/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_copy_ace_extras": "copyfiles -u 2 -V \"./extras/ace-editor/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_react-build": "cross-env CI=false react-scripts build",
-    "_react-dev": "cross-env APP_ENV=development cross-env BROWSER=none cross-env PORT=4000 cross-env react-scripts start",
+    "_react-dev": "cross-env APP_ENV=development cross-env EXTEND_ESLINT=true cross-env BROWSER=none cross-env PORT=4000 cross-env react-scripts start",
     "_main-transpile": "cd ./src-main && tsc",
     "_electron-dev": "cross-env APP_ENV=development cross-env REACT_DEV_URL=http://localhost:4000 cross-env  electron .",
     "_rebuild-native": "cross-env VisualStudioVersion=15.0 npm install --build-from-source",
