--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "joi": "^14.3.1",
     "js-yaml": "3.13.1",
     "mkdirp": "0.5.1",
+    "node-watch": "^0.6.4",
     "request": "2.88.2",
     "simple-git": "^1.132.0",
     "toml": "2.3.3",
