--- a/package.json
+++ b/package.json
@@ -83,11 +83,11 @@
     "_main-transpile": "cd ./src-main && tsc",
     "_electron-dev": "cross-env APP_ENV=development cross-env REACT_DEV_URL=http://localhost:4000 cross-env  electron .",
     "_rebuild-native": "cross-env VisualStudioVersion=15.0 npm install --build-from-source",
-    "_electron-dist-win": "npm run _copy-electron-code && electron-builder",
+    "_electron-dist-win": "npm run _copy-electron-code && electron-builder --win",
     "_electron-dist-linux-deb": "npm run _copy-electron-code && electron-builder --linux deb",
-    "_electron-dist-linux": "npm run _copy-electron-code && electron-builder",
+    "_electron-dist-linux": "npm run _copy-electron-code && electron-builder --linux",
     "_electron-dist-linux-all": "npm run _electron-dist-linux && npm run _electron-dist-linux-deb",
-    "_electron-dist-mac": "npm run _copy-electron-code && electron-builder",
+    "_electron-dist-mac": "npm run _copy-electron-code && electron-builder --mac",
     "dist-win": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-win",
     "dist-linux": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-linux-all",
     "dist-mac": "npm run _copy-ace && rimraf dist && rimraf build && npm run _react-build && npm run _electron-dist-mac"
