--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/request": "2.48.4",
     "command-exists": "^1.2.8",
+    "electron-google-analytics": "^0.2.2",
     "electron-context-menu": "^0.10.1",
     "electron-is-dev": "^1.0.1",
     "electron-unhandled": "^3.0.2",
@@ -33,6 +34,7 @@
     "joi": "^14.3.1",
     "js-yaml": "3.13.1",
     "mkdirp": "0.5.1",
+    "node-machine-id": "^1.1.12",
     "node-watch": "^0.6.4",
     "request": "2.88.2",
     "simple-git": "^1.132.0",
