--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ matrix:
 cache: npm
 
 install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install git-core; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libssl-dev; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo snap install snapcraft --classic; fi
   - npm install
 
 script:
