--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/ace": "^0.0.43",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "@types/uuid": "3.4.3",
     "ace-editor-builds": "1.2.4",
     "ajv": "6.5.4",
     "ansi-styles": "^3.2.1",
@@ -54,7 +55,7 @@
     "concurrently": "3.5.1",
     "copyfiles": "2.1.0",
     "cross-env": "5.1.3",
-    "electron": "^8.2.5",
+    "electron": "^8.3.0",
     "electron-builder": "^22.6.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
@@ -69,7 +70,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "uuid": "^8.0.0"
   },
   "peerDependencies": {},
   "main": "build/src-main/electron.js",
