--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/request": "2.48.4",
     "command-exists": "^1.2.8",
-    "electron-google-analytics": "^0.3.0",
     "electron-context-menu": "^0.10.1",
+    "electron-google-analytics": "^0.3.0",
     "electron-is-dev": "^1.0.1",
     "electron-unhandled": "^3.0.2",
     "eventemitter2": "^6.3.1",
@@ -38,6 +38,7 @@
     "node-watch": "^0.6.4",
     "request": "2.88.2",
     "simple-git": "^1.132.0",
+    "string-argv": "^0.3.1",
     "toml": "2.3.3",
     "tomlify-j0.4": "3.0.0",
     "user-home": "2.0.0"
